# cutready

./: .gitignore  404.html  AGENT_ARCHITECTURE.md  AGENT_CODE_SNIPPETS.md  AGENT_QUICK_REFERENCE.md  CHANGELOG.md  README.md  agentivenotes.md  elucim-changes.md  index.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  sitemap-0.xml  sitemap-index.xml  tailwind.config.ts  test-graph.html  vite.config.ts  vitest.config.ts
.auditaur/: config.json
.changes/: README.md  config.json  covector-setup.md  sync-version.mjs
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  frontend.instructions.md  git-conventions.instructions.md  ios-companion.instructions.md  tauri-backend.instructions.md
.github/workflows/: covector-version-or-publish.yml  ios-companion.yml  ios-testflight.yml  publish-docs.yml  release-macos.yml  release-please.yml  release-win-linux.yml  release.yml
Casks/: cutready.rb
_astro/: Search.astro_astro_type_script_index_0_lang.BoiQrgqY.js  index.D3vHpPUZ.css  ui-core.CA9IRZlD.js
architecture/ai-integration/: index.html
architecture/file-format/: index.html
architecture/overview/: index.html
collaboration/history-graph/: index.html
collaboration/merging/: index.html
collaboration/remote-sync/: index.html
collaboration/version-history/: index.html
docs/: ARCHITECTURE.md  DOCS_TOC.md  GUIDANCE.md  IMPLEMENTATION_PLAN.md  NORTH_STAR.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  v0.5.0-test-plan.md
docs/public/: CNAME
docs/reference/: ARCHITECTURE.md  ELUCIM_V2_LOCAL_HANDOFF.md  ELUCIM_VISUALS_NEXT_STEPS.md  GUIDANCE.md  IMPLEMENTATION_PLAN.md  NORTH_STAR.md  PROMPTY_MIGRATION.md  UI_MODERNIZATION_PLAN.md
e2e/: branching-merging-remote.spec.ts  capture-doc-screenshots.spec.ts  p0-confidence.spec.ts  p1-confidence.spec.ts  phase0-snapshots.spec.ts  phase1-timelines.spec.ts  settings-provider.spec.ts  settings-remote.spec.ts  snapshots-solo.spec.ts  sync-bar.spec.ts  visual-cell.spec.ts  visual-check.spec.ts
features/ai-assistant/: index.html
features/browser-recording/: index.html
features/document-import/: index.html
features/notes-markdown/: index.html
features/screen-capture/: index.html
features/sketch-editor/: index.html
features/sparkle-buttons/: index.html
features/storyboard-management/: index.html
features/ui-navigation/: index.html
features/version-history/: index.html
getting-started/installation/: index.html
getting-started/projects/: index.html
getting-started/quick-start/: index.html
ios/: Package.swift  project.yml
ios/App/: CutReadyCompanionApp.swift
ios/CutReadyCompanion.xcodeproj/: project.pbxproj
ios/scripts/: embed-local-config.sh
pagefind/: pagefind-entry.json  pagefind.en_2da020c8a4.pf_meta
pagefind/fragment/: en_1d70a68.pf_fragment  en_1fd657f.pf_fragment  en_25b7140.pf_fragment  en_343bfca.pf_fragment  en_36b8d93.pf_fragment  en_409f524.pf_fragment  en_4d650f4.pf_fragment  en_62767a1.pf_fragment  en_66cb1eb.pf_fragment  en_6b791ea.pf_fragment  en_7739827.pf_fragment  en_82e21a9.pf_fragment  en_8558413.pf_fragment  en_8711ecf.pf_fragment  en_8b1fd73.pf_fragment  en_8bf7bb1.pf_fragment  en_9a64a0f.pf_fragment  en_a0b21c4.pf_fragment  en_a159961.pf_fragment  en_a330397.pf_fragment  en_ae5d95a.pf_fragment  en_b01b6f7.pf_fragment  en_b972ea3.pf_fragment  en_cbb03a4.pf_fragment  en_e11f7a6.pf_fragment  en_e3476bd.pf_fragment  en_e5ef69e.pf_fragment  en_e9b465f.pf_fragment  en_ef2e1de.pf_fragment  en_f07eeea.pf_fragment
pagefind/index/: en_2f9b411.pf_index  en_96e21ea.pf_index
playwright-sidecar/: index.js  package-lock.json  package.json
roadmap/upcoming/: index.html
scripts/: auditaur-drill.mjs  auditaur-github-drill.mjs  auditaur-github-human-drill.mjs  auditaur-project-switch-drill.json  auditaur-project-switch-drill.mjs  dedupe-release-notes.mjs  elucim-agent-bridge.mjs  release.ps1  take-screenshots.mjs
scripts/agent-eval/: instruction-cases.json  score-copy.mjs  score-instructions.mjs
scripts/visual-eval/: briefs.json  run-eval.mjs  score-visuals.mjs  smoke-v2.mjs
settings/ai-models/: index.html
settings/overview/: index.html
settings/repository/: index.html
src/: App.tsx  devMock.ts  index.css  main.tsx  styles.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  animation.rs  automation.rs  diagnostics.rs  document.rs  draftline.rs  export.rs  feedback.rs  github.rs  import.rs  interaction.rs  mod.rs  narration_preview.rs  note.rs  project.rs  recording.rs  screenshot.rs  sketch.rs  storyboard.rs  terminal.rs  versioning.rs  video_import.rs
src-tauri/src/engine/: agent_state.rs  animation.rs  automation.rs  copilot.rs  diagnostics_sanitizer.rs  draftline_adapter.rs  export.rs  ffmpeg.rs  import.rs  interaction.rs  memory.rs  mod.rs  narration_preview.rs  project.rs  recording.rs  recording_native_audio_macos.rs  recording_native_audio_windows.rs  recording_native_camera_windows.rs  recording_native_windows.rs  versioning.rs  versioning_merge.rs  versioning_remote.rs  video_import.rs
src-tauri/src/engine/agent/: animations.rs  azure_auth.rs  cleanup.rs  healing.rs  llm.rs  mod.rs  narrative.rs  prompty_runner.rs  runner.rs  sanitize.rs  selectors.rs  tools.rs  web.rs
src-tauri/src/llm/: azure_openai.rs  mod.rs  types.rs
src-tauri/src/models/: action.rs  animation.rs  document.rs  mod.rs  recording.rs  script.rs  session.rs  sketch.rs
src-tauri/src/util/: audio.rs  ffmpeg.rs  keyboard_hook.rs  mod.rs  screenshot.rs  sidecar.rs  trace.rs
src/agents/: builtInAgents.ts
src/components/: ActionCard.tsx  AgentRunInspector.tsx  AgentStateDatabasePanel.tsx  AiApplyGateDialog.tsx  AppCloseGuard.tsx  AppLayout.tsx  AssetList.tsx  AssetViewer.tsx  CaptureWindow.tsx  ChangesPanel.tsx  ChatPanel.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  (+81 more)
welcome/: index.html
(+197 files in other folders)
