[package]
name = "cutready"
version = "1.6.0"
edition = "2021"
description = "Product demo video authoring tool"

[lib]
name = "cutready_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
log = "0.4"
dirs = "6"
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures-util = "0.3"
gix = { version = "0.70", default-features = false, features = ["basic", "index"] }
git2 = "0.20"
xcap = "0.8"
image = "0.25"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
urlencoding = "2"
zip = "2"
quick-xml = "0.37"
pdf-extract = "0.8"

# Tauri plugins
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-stronghold = "2"

# Shared agentic substrate
agentive = { git = "https://github.com/sethjuarez/agentive.git" }

# Vendor OpenSSL on macOS to support cross-compilation (ARM → Intel)
[target.'cfg(target_os = "macos")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23.0"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_UI_WindowsAndMessaging"] }
windows-capture = "2.0.0"

# Stronghold's scrypt dependency needs opt-level 3 even in dev mode
# https://github.com/tauri-apps/plugins-workspace/issues/2048
[profile.dev.package.scrypt]
opt-level = 3

[dev-dependencies]
tempfile = "3"
